--- a/PezD/package.json
+++ b/PezD/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "firebase": "^7.14.3"
+  },
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
