made basic requirements for firesore pez project

--- a/PezD/package.json
+++ b/PezD/package.json
@@ -2,10 +2,11 @@
   "name": "pezd",
   "version": "1.0.0",
   "description": "",
-  "main": "public/main.js",
+  "main": ".",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
