--- a/mybooksreact/client/package.json
+++ b/mybooksreact/client/package.json
@@ -2,6 +2,9 @@
   "name": "mybooksreact",
   "version": "0.1.0",
   "private": true,
+  "description": "CLient of mybooks proj",
+  "main": "server.js",
+  
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
