--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ javascriptinghw/promise-shop/node_modules
 javascriptinghw/npmModule/node_modules
 webpackProj/node_modules
 webpackProj2/node_modules
+week6/tts-react-practice-week1/node_modules
